--- a/apps/no-bff/package.json
+++ b/apps/no-bff/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "admin",
+  "name": "no-bff",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "vite build",
-    "clean": "rm -rf dist",
-    "dev": "vite --host 0.0.0.0 --port 3001 --clearScreen false",
+    "build": "next build",
+    "clean": "rm -rf .next",
+    "dev": "next dev -p 3002",
+    "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src/"
+    "start": "next start"
   },
   "dependencies": {
+    "@repo/logger": "*",
+    "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@repo/ui": "*"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^14.1.1",
+    "@types/node": "^20.11.24",
     "@types/react": "^18.2.62",
     "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4"
+    "typescript": "^5.3.3"
   }
 }
