add: add module clean script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo run lint",
     "test": "turbo run test",
-    "typecheck": "turbo run typecheck"
+    "typecheck": "turbo run typecheck",
+    "clean:modules": "npx npkill"
   },
   "devDependencies": {
     "prettier": "^3.2.5",
