--- a/apps/bff/package.json
+++ b/apps/bff/package.json
@@ -10,12 +10,14 @@
     "test": "bun test"
   },
   "dependencies": {
-    "bun": "^1.1.12",
+    "@elysiajs/cors": "^1.0.2",
+    "@elysiajs/eden": "^1.0.14",
+    "@elysiajs/swagger": "^1.0.5",
     "elysia": "^1.0.23"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@repo/eslint-config": "*",
+    "@repo/typescript-config": "*",
     "@types/bun": "^1.1.3"
   }
 }
